syntax = "proto3";
package oauth;
option go_package = "./";

service OAuthService{
  rpc SignUp(SignUpRequest) returns (SignUpResponse){}
  rpc SignIn(SignInRequest) returns (SignInResponse){}
  rpc Access(AccessRequest) returns (AccessResponse){}
  rpc Refresh(RefreshRequest) returns (Tokens){}
}

//Request
message SignUpRequest{
  string login = 1;
  string password = 2;
}
message SignInRequest{
  string login = 1;
  string password = 2;
}
message AccessRequest{
  string access_token = 1;
}
message RefreshRequest{
  string refresh_token = 1;
}
//base
message Tokens{
//  string at_uuid = 1;
  string access_token = 2;
  int64 at_expires = 3;

//  string rt_uuid = 4;
  string refresh_token = 5;
  int64 rt_expires = 6;
}
//Response
message SignUpResponse{
  string uuid = 1;
  Tokens tokens = 2;
}
message SignInResponse{
  string uuid = 1;
  Tokens tokens = 2;
}
message AccessResponse{
  string user_uuid = 1;
}
//message RefreshResponse{
//  string user_uuid = 1;
//  Tokens tokens = 2;
//}